# flash-goban

./: .gitignore  Pipfile  README.md  fg.bat  main.py  main.spec  make-exe.spec  mvce.py  myspec.spec  pyproject.toml  requirements.txt  try.py  try2.py
flash_goban/: anki_connect.py  settings.py
flash_goban/automate/: game.sgf  trial.py
sgf/: cho-chikun-36.sgf
sounds/: 591572__chilsville__football.m4a
