[tool.poetry]
name = "flash-goban"
version = "0.1.0"
description = ""
authors = ["Terrence Brannon <metaperl@gmail.com>"]
readme = "README.md"
packages = [{include = "flash_goban"}]

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
