[tool.poetry]
name = "flash-goban"
version = "0.1.0"
description = ""
authors = ["Terrence Brannon <metaperl@gmail.com>"]
readme = "README.md"
packages = [{include = "flash_goban"}]

[tool.poetry.dependencies]
python = "^3.10"
PyAutoGUI = "^0.9.53"
loguru = "^0.6.0"
traitlets = "^5.4.0"
Pillow = "^9.2.0"
opencv-python = "^4.6.0.66"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
